# skills-rs

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: release.yml
src/: agents.rs  cmd_add.rs  cmd_init.rs  cmd_list.rs  cmd_remove.rs  cmd_update.rs  discover.rs  git.rs  installer.rs  lock.rs  main.rs  prompt.rs  sanitize.rs  skill.rs  source.rs  update.rs
