[package]
name = "skills"
version = "0.3.0"
edition = "2021"
description = "Install agent skills from any git source"
license = "MIT"
repository = "https://github.com/olamedia/skills-rs"
homepage = "https://github.com/olamedia/skills-rs"
authors = ["olamedia"]

[[bin]]
name = "skills"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
dirs = "6"
tempfile = "3"
dialoguer = "0.11"
atty = "0.2"
colored = "2"
regex = "1"

[package.metadata.deb]
maintainer = "olamedia"
section = "utils"
priority = "optional"
assets = [["target/release/skills", "usr/bin/", "755"]]
depends = "git"

[package.metadata.generate-rpm]
assets = [{ source = "target/release/skills", dest = "/usr/bin/skills", mode = "755" }]

[package.metadata.generate-rpm.requires]
git = "*"
